# dotcms-utilities

./: .gitignore  CLAUDE.md  README.md  install-dev-scripts.sh  test-pr-link.md
demo-site-starter-urls/: README.md  demo-starter-urls-archive.txt  dotcms-get-demo-site-starter-urls.sh
dev-k8s-local-setup/: README.md  backup_restore.sh  setup_dev.sh
dev-k8s-local-setup/backup/: README.md
dev-k8s-local-setup/installation/: setup_dev.sh
dev-scripts/: check_updates.sh  git-issue-branch  git-issue-create  git-issue-pr  git-new-issue-branch  git-smart-switch
glowroot-scylladb/: README.md  datastax-driver.conf  docker-compose.yml  glowroot-central.properties
js-scripts/: dot-config.js  package-lock.json  package.json  utils.js
js-scripts/get-docker-image/: get-docker-image.js
js-scripts/update-colors/: update-colors.js
js-scripts/update-ema-config/: update-ema-config.js
js-scripts/update-exp-config/: update-exp-config.js
js-scripts/update-ff/: update-ff.js
js-scripts/update-token-ema/: update-token-ema.js
mysql_to_postgres/: README.md  pyproject.toml  requirements.txt  tox.ini
mysql_to_postgres/invoke/: migrate_db.py  tasks.py  templates.py  utils.py
