[tool.poetry]
name = "dotcms-mysql-to-pg"
version = "0.1.0"
description = ""
authors = ["Todd Jacobsen <todd.jacobsen@dotcms.com>"]
readme = "README.md"
packages = [{include = "dotcms_mysql_to_pg"}]

[tool.poetry.dependencies]
python = "^3.8, <3.13"
mysql-connector-python = "^8.3.0"
psycopg2-binary = "^2.9.9"
rich = "^13.7.0"
invoke = "^2.2.0"
tox = "^4.12.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
migra = "^3.0.1663481299"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
